# cs_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/anim_test/: CMakeLists.txt
apps/anim_test/src/: main.cpp
apps/test/: CMakeLists.txt
apps/test/assets/meshes/: kimono.mtl  sphere.mtl
apps/test/assets/meshes/test/: unit_capsule.glb  unit_cube.glb  unit_cylinder.glb  unit_icosphere.glb  unit_sphere.glb
apps/test/src/: main.cpp
apps/test/src2/: component.cpp  component.hpp  main.cpp
apps/test2/: CMakeLists.txt
apps/test2/src/: main.cpp
cmake/: compile_shaders.cmake
engine/: CMakeLists.txt
engine/assets/shaders/directx/: default_color.ps.hlsl  default_color.vs.hlsl  default_texture.hlsl.vert  default_texture.ps.hlsl  default_texture.vs.hlsl  main.ps.hlsl  main.vs.hlsl
engine/assets/shaders/opengl/: default_texture_frag.glsl  default_texture_vert.glsl  main.ps.glsl  main.vs.glsl
engine/src/cs/: class.hpp  cs.cpp  cs.hpp  name_id.cpp  name_id.hpp  types.hpp
engine/src/cs/containers/: dynamic_array.hpp  hash_map.hpp  hash_table.hpp  linked_list.hpp  pair.hpp  spatial_hash_grid.cpp  spatial_hash_grid.hpp
engine/src/cs/engine/: cvar.cpp  cvar.hpp  engine.cpp  engine.hpp  event.hpp  game.hpp  input.cpp  input.hpp  name_id.cpp  name_id.hpp  resource.hpp  singleton.hpp  task_system.cpp  task_system.hpp  thread_pool.cpp  thread_pool.hpp  window.hpp
engine/src/cs/engine/app/: app.cpp  app.hpp
engine/src/cs/engine/game/: entity.cpp  entity.hpp  game_instance.cpp  game_instance.hpp
engine/src/cs/engine/net/: net_connection.cpp  net_connection.hpp  net_instance.cpp  net_instance.hpp  socket.cpp  socket.hpp
engine/src/cs/engine/physics/: collision_function.cpp  collision_function.hpp  physics_system.cpp  physics_system.hpp  spatial_hash_grid.hpp
engine/src/cs/engine/profiling/: profiler.cpp  profiler.hpp
engine/src/cs/engine/renderer/: camera.cpp  camera.hpp  material.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
engine/src/cs/engine/renderer/directx/: directx11_renderer.cpp  directx11_renderer.hpp  directx_renderer.cpp  directx_renderer.hpp
engine/src/cs/engine/renderer/opengl/: opengl_renderer.cpp  opengl_renderer.hpp
engine/src/cs/engine/resource/: renderer_resources.cpp  renderer_resources.hpp
engine/src/cs/engine/vr/: vr_system.cpp  vr_system.hpp
engine/src/cs/engine/window/glfw/: glfw_window.cpp  glfw_window.hpp
engine/src/cs/game/: game.hpp
engine/src/cs/math/: box.cpp  box.hpp  mat4.cpp  mat4.hpp  math.hpp  quat.cpp  quat.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
engine/src/cs/memory/: shared_ptr.hpp  weak_ptr.hpp
engine/src/cs/time/: low_level_timer.hpp
